TestSuite/Syntax/Correct/Include2.tjp
project yourId "Your Project" "1.0" 2005-04-05 2005-05-01

task main "Main task" {
}

include "Include2.tji" { taskprefix main }

