TestSuite/Syntax/Errors/UnixTime3.tjp
project epoch "Epoch" "1.0" 1970-01-01 2035-01-01 

task t "Task" {
	start 1971-01-01
}

